--- a/tcc-transaction-tutorial-sample/tcc-transaction-http-sample/tcc-transaction-http-order/src/main/resources/tccjdbc.properties
+++ b/tcc-transaction-tutorial-sample/tcc-transaction-http-sample/tcc-transaction-http-order/src/main/resources/tccjdbc.properties
@@ -1,9 +1,8 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://127.0.0.1:3306/TCC_ORD?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
-tcc.jdbc.url=jdbc:mysql://127.0.0.1:3306/TCC?useUnicode=true&characterEncoding=UTF-8&allowMultiQueries=true
+jdbc.url=jdbc:mysql://localhost:3306/tcc_ord
+tcc.jdbc.url=jdbc:mysql://localhost:3306/tcc
 jdbc.username=root
-jdbc.password=
-
+jdbc.password=root
 c3p0.initialPoolSize=10
 c3p0.minPoolSize=10
 c3p0.maxPoolSize=30
